<resources>
    <string name="app_name">pwfb</string>
    <string name="app_name_upper">PWFB</string>

    <string name="app_version">App Version : 1.4</string>

    <string name="splash_title">PEAK WEEK FOR BODYBUILDING</string>
    <string name="home">Home</string>
    <string name="nutrition">Nutrition</string>
    <string name="training">Training</string>
    <string name="profile">Profile</string>

    <string name="kr_home">홈</string>
    <string name="kr_nutrition">영양</string>
    <string name="kr_training">훈련</string>
    <string name="kr_profile">프로필</string>
    
    <string name="peak_week_strategy">✨ Peak Week 전략 ✨</string>
    <string name="gonna_be_alright">Everything gonna be alright</string>
    <string name="man_of_the_hour">👍 오늘 주인공은 당신입니다!</string>
    <string name="correction_day">🤘 Correction Day!</string>
    <string name="high_carbohydrate_day">🤙 High Carb(고탄수) Day!</string>
    <string name="low_carbohydrate_day">🤙 Low Carb(저탄수) Day!</string>
    <string name="re_feed_day">😋 ReFeed Day!</string>
    <string name="empty_stomach_weight">EMPTY STOMACH WEIGHT</string>
    <string name="d_day">D-DAY</string>
    <string name="nutrition_upper">NUTRITION</string>
    <string name="training_upper">TRAINING</string>

    <string name="carbohydrate_upper">CARBOHYDRATE</string>
    <string name="protein_upper">PROTEIN</string>
    <string name="fat_upper">FAT</string>
    <string name="water_upper">WATER</string>
    <string name="sodium_upper">SODIUM</string>
    <string name="potassium_upper">POTASSIUM</string>
    <string name="creatine_upper">CREATINE</string>
    <string name="dietary_fiber_upper">DIETARY FIBER</string>

    <string name="custom_training_program_upper">CUSTOM TRAINING PROGRAM</string>
    <string name="pwfb_information">PWFB 정보</string>
    <string name="log_send">로그 전송</string>
    <string name="the_day_strategy_1">당일 전략 💥</string>
    <string name="the_day_strategy_2">✨ 당일 전략 ✨</string>

    <string name="full_upper">FULL</string>
    <string name="dry_upper">DRY</string>
    <string name="choose_upper">CHOOSE</string>

    <string name="am_i_full">Am I Full?</string>
    <string name="am_i_dry">Am I Dry?</string>
    <string name="am_i_flat">Am I Flat?</string>

    <string name="yes_upper">YES</string>
    <string name="no_upper">NO</string>

    <string name="stabilize_condition">Stabilize Condition</string>
    <string name="consider_flat">물, 나트륨, 탄수화물 추가 섭취</string>
    <string name="continue_dehydration_strategy">Continue Dehydration Strategy</string>
    <string name="continue_upper">CONTINUE</string>

    <string name="welcome">환영합니다! 👋</string>
    <string name="input_name">What\'s Your Name?</string>
    <string name="next">Next</string>

    <string name="kr_empty_stomach_weight">공복 체중</string>
    <string name="kg">Kg</string>

    <string name="go">Go</string>
    <string name="time">시간</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="hint_nutrition_carbohydrate">섭취할 탄수화물을 자유롭게 입력해주세요</string>
    <string name="hint_nutrition_protein">섭취할 단백질을 자유롭게 입력해주세요</string>
    <string name="hint_nutrition_fat">섭취할 지방을 자유롭게 입력해주세요</string>
    <string name="hint_nutrition_water">섭취할 물의 양을 자유롭게 입력해주세요</string>
    <string name="hint_nutrition_sodium">섭취할 염분을 자유롭게 입력해주세요</string>
    <string name="hint_nutrition_potassium">섭취할 칼륨을 자유롭게 입력해주세요</string>
    <string name="hint_nutrition_creatine">섭취할 크레아틴을 자유롭게 입력해주세요</string>
    <string name="hint_nutrition_dietary_fiber">섭취할 식이섬유를 자유롭게 입력해주세요</string>

    <string name="home_carbohydrate_day_7">평소보다 150g 이내로 추가 섭취하세요 🌾</string>
    <string name="home_carbohydrate_day_654">50~100g 내외 섭취하세요 🌾</string>
    <string name="home_carbohydrate_day_32">%dg 섭취하세요 🌾</string>
    <string name="home_carbohydrate_day_1">%dg~%dg 사이로 섭취하세요 🌾</string>

    <string name="home_protein_day_654">%dg~%dg 사이로 섭취하세요 🥩</string>
    <string name="home_protein_day_32">%dg 이하로 섭취하세요 🥩</string>
    <string name="home_protein_day_1">%dg 이하로 섭취하세요 🥩</string>

    <string name="home_fat_day_7654">%dg~%dg 사이로 섭취하세요 🥜</string>
    <string name="home_fat_day_32">%dg 이하로 섭취하세요 🥜</string>
    <string name="home_fat_day_1">%dg~%dg 사이로 섭취하세요 🥜</string>

    <string name="home_water_day_3">충분히 섭취하세요 💧</string>
    <string name="home_water_day_2">2000ml까지 섭취하세요 💧</string>
    <string name="home_water_day_1">500ml까지 섭취하세요 💧</string>

    <string name="home_sodium_day_3">2500mg~3000mg 섭취하세요 🧂</string>
    <string name="home_sodium_day_2">로딩 종료 후 줄이세요 🧂</string>
    <string name="home_sodium_day_1">섭취하지 마세요 🧂</string>

    <string name="home_potassium_day_3">평소의 1.2배를 섭취하세요 🍌</string>

    <string name="home_creatine_day_7654">3g~5g 사이로 섭취하세요 🔥</string>
    <string name="home_creatine_day_321">섭취하지 마세요 ❌</string>

    <string name="home_dietary_fiber_day_654">충분히 섭취하세요 🥦</string>
    <string name="home_dietary_fiber_day_321">섭취하지 마세요 ❌</string>

    <string name="home_training_day_6">마지막 하체 훈련! 🏋️</string>
    <string name="home_training_day_54">상체 고볼륨 훈련을 하세요\n다음날 과한 근육통은 피하세요</string>
    <string name="home_training_day_3">이른 아침 운동 이후 로딩을 하세요</string>
    <string name="home_training_day_2">전신 펌핑 및 포징 연습을 하세요</string>
    <string name="home_training_day_1">충분한 휴식을 하세요</string>

    <string name="nutrition_carbohydrate_day_7">평소 섭취량(g) + 150g 🌾</string>
    <string name="nutrition_carbohydrate_day_654">탄수화물 고갈:50g~100g 내외 섭취 🌾</string>
    <string name="nutrition_carbohydrate_day_3">최대량: ~(체중x10)g 🌾</string>
    <string name="nutrition_carbohydrate_day_2">최대량: ~(체중x20/3)g 🌾</string>
    <string name="nutrition_carbohydrate_day_1">몸 상태 확인 후, (체중)~(체중*3)g 🌾</string>

    <string name="nutrition_protein_day_654">섭취량 증가: (체중x2.4)g~(체중x3)g 🥩</string>
    <string name="nutrition_protein_day_32">섭취량 감소: (체중x1.6)g 🥩</string>
    <string name="nutrition_protein_day_1">(체중x3)g 🥩</string>

    <string name="nutrition_fat_day_7654">불포화 지방산 위주로 섭취:\n(체중x0.7g)~(체중x1.2g) 🥜</string>
    <string name="nutrition_fat_day_32">(체중x0.5)g 🥜</string>
    <string name="nutrition_fat_day_1">섭취량 증가: (체중x0.7)g~(체중x1.0)g 🥜</string>

    <string name="nutrition_water_day_3">부족함 없이! 💧</string>
    <string name="nutrition_water_day_2">2000ml 💧</string>
    <string name="nutrition_water_day_1">500ml 💧</string>

    <string name="nutrition_sodium_day_3">(평소 섭취량x1.2)mg 🧂</string>
    <string name="nutrition_sodium_day_2">(평소 섭취량x2)mg 🧂</string>
    <string name="nutrition_sodium_day_1">무염 ❌</string>

    <string name="nutrition_potassium_day_3">(평소 섭취량x1.2)mg 🍌</string>

    <string name="nutrition_creatine_day_7654">3g~5g 🔥</string>
    <string name="nutrition_creatine_day_321">중단 ❌</string>

    <string name="nutrition_dietary_fiber_day_654">부족함 없이! 🥦</string>
    <string name="nutrition_dietary_fiber_day_321">중단 ❌</string>

    <string name="nutrition_usually_intake">평소대로 진행하세요 %s</string>
    <string name="nutrition_usually_intake_2">평소대로 진행 %s</string>
    
    <string name="write_training_plan">운동 계획을 작성해보세요</string>
    <string name="training_day_6">마지막 하체 훈련! 🏋️</string>
    <string name="training_day_54">상체 고볼륨 훈련,\n다음날 과한 근육통은 금물! 🔥</string>
    <string name="training_day_3">이른 아침 운동 후, 로딩 시작 🧨</string>
    <string name="training_day_2">전신 펌핑 및 포징 연습 💥</string>
    <string name="training_day_1">휴식 🧘</string>

    <string name="empty_stomach_weight_tip">
        글리코겐 및 수분 보유량에 따라 크게 달라지므로,\n자주 측정해주세요.
    </string>

    <string name="profile_weight">이상적인 공복 체중 : %s~%sKg</string>
    <string name="modify">변경</string>

    <string-array name="calendar_week">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>

    <string-array name="calendar_month">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

    <!-- Description -->
    <string name="bt_time_description">d-day 시간 설정</string>
    <string name="iv_plus_description">+ 아이콘</string>
    <string name="iv_minus_description">- 아이콘</string>
    <string name="iv_app">App 이미지</string>

    <string name="admob_key">ca-app-pub-4818752422104122/4888923038</string>

</resources>
