<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kr_nutrition"
                style="@style/style_title_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_d_day"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_function_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/peak_week_strategy"
                    android:textColor="@color/c_caab3f"
                    android:textSize="25sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_carbohydrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/carbohydrate_upper"
                style="@style/style_function_text"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/cl_d_day"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_carbohydrate"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_function_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_carbohydrate"
                app:layout_constraintStart_toStartOf="parent">
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protein_upper"
                style="@style/style_function_text"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/cl_carbohydrate"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_protein"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_function_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_protein"
                app:layout_constraintStart_toStartOf="parent">
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fat_upper"
                style="@style/style_function_text"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/cl_protein"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_fat"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_function_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_fat"
                app:layout_constraintStart_toStartOf="parent">
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_water"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water_upper"
                style="@style/style_function_text"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/cl_fat"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_water"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_function_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_water"
                app:layout_constraintStart_toStartOf="parent">
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_sodium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sodium_upper"
                style="@style/style_function_text"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/cl_water"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_sodium"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_function_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_sodium"
                app:layout_constraintStart_toStartOf="parent">
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_potassium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potassium_upper"
                style="@style/style_function_text"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/cl_sodium"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_potassium"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_function_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_potassium"
                app:layout_constraintStart_toStartOf="parent">
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_creatine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creatine_upper"
                style="@style/style_function_text"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/cl_sodium"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_creatine"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_function_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_creatine"
                app:layout_constraintStart_toStartOf="parent">
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_dietary_fiber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dietary_fiber_upper"
                style="@style/style_function_text"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/cl_sodium"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_dietary_fiber"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_function_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_dietary_fiber"
                app:layout_constraintStart_toStartOf="parent">
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>