<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_strategy"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/the_day_strategy_2"
            android:textColor="@color/c_caab3f"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_choose"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_choose_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:background="@drawable/shape_strategy_circle"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="50dp"
                    android:text="@string/full_upper"
                    android:textColor="@color/c_caab3f"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_upper"
                android:textColor="@color/c_caab3f"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_choose_dry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/shape_strategy_circle"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="50dp"
                    android:text="@string/dry_upper"
                    android:textColor="@color/c_caab3f"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/style_function_layout"
                android:id="@+id/cl_am_i_full"
                android:background="@drawable/shape_strategy_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                tools:ignore="MissingConstraints"
                tools:visibility="visible">

                <TextView
                    style="@style/style_function_color_text"
                    android:id="@+id/tv_am_i_full"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/am_i_full"
                    tools:ignore="MissingConstraints" />

                <TextView
                    style="@style/style_strategy_yes_no"
                    android:id="@+id/tv_full_yes"
                    android:text="@string/yes_upper"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_am_i_full" />

                <TextView
                    style="@style/style_strategy_yes_no"
                    android:id="@+id/tv_full_no"
                    android:text="@string/no_upper"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_am_i_full" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/style_function_layout"
                android:id="@+id/cl_am_i_dry"
                android:background="@drawable/shape_strategy_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                tools:ignore="MissingConstraints" >

                <TextView
                    style="@style/style_function_color_text"
                    android:id="@+id/tv_am_i_dry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/am_i_dry"
                    tools:ignore="MissingConstraints" />

                <TextView
                    style="@style/style_strategy_yes_no"
                    android:id="@+id/tv_dry_yes"
                    android:text="@string/yes_upper"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_am_i_dry" />

                <TextView
                    style="@style/style_strategy_yes_no"
                    android:id="@+id/tv_dry_no"
                    android:text="@string/no_upper"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_am_i_dry" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/style_function_layout"
                android:id="@+id/cl_am_i_flat"
                android:background="@drawable/shape_strategy_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                tools:ignore="MissingConstraints" >

                <TextView
                    style="@style/style_function_color_text"
                    android:id="@+id/tv_am_i_flat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/am_i_flat"
                    tools:ignore="MissingConstraints" />

                <TextView
                    style="@style/style_strategy_yes_no"
                    android:id="@+id/tv_flat_yes"
                    android:text="@string/yes_upper"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_am_i_flat" />

                <TextView
                    style="@style/style_strategy_yes_no"
                    android:id="@+id/tv_flat_no"
                    android:text="@string/no_upper"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_am_i_flat" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/style_strategy_yes_no"
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/stabilize_condition"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>