<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kr_empty_stomach_weight"
            style="@style/style_title_text"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textColorHint="@color/c_949292"
            android:textCursorDrawable="@drawable/shape_et_name_cursor"
            android:textAlignment="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:background="@null"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toTopOf="@id/bt_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kg"
            android:textColor="@color/c_d6b54a"
            android:textSize="25sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/et_weight"
            app:layout_constraintStart_toEndOf="@id/et_weight"
            app:layout_constraintTop_toTopOf="@+id/et_weight" />

        <Button
            android:id="@+id/bt_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/selector_btn_next"
            android:text="@string/next"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/c_949292"
            android:textAllCaps="false"
            android:minHeight="70dp"
            android:enabled="false"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>